--- a/index.html
+++ b/index.html
@@ -21,19 +21,19 @@
                 <label for="bill">Bill</label>
                 <div id="bill">
                     <img src="images/icon-dollar.svg" alt="icon dollar">
-                    <input class="input bill-value" type="number" name="bill" placeholder="0"  id="bill-input">
+                    <input class="input" type="number" name="bill" placeholder="0" value="">
                 </div>
             </div>
 
             <div id="main-left-middle">
                 <p>Select Tip %</p>
                 <div class="percentage-choice">
-                    <button class="button" value="5" onclick="percentFive()">5%</button>
-                    <button class="button" value="10" onclick="percentTen()">10%</button>
-                    <button class="button" value="15" onclick="percentFifteen()">15%</button>
-                    <button class="button" value="25" onclick="percentTwentyFive()">25%</button>
-                    <button class="button" value="50" onclick="percentFifty()">50%</button>
-                    <input class="input custom" type="number" placeholder="Custom" value="" oninput="inputFun()" id="customInput">
+                    <button class="button" value="5">5%</button>
+                    <button class="button" value="10">10%</button>
+                    <button class="button" value="15">15%</button>
+                    <button class="button" value="25">25%</button>
+                    <button class="button" value="50">50%</button>
+                    <input class="input custom" type="number" placeholder="Custom" value="">
                 </div>
             </div>
             <div id="main-left-bottom">
@@ -43,7 +43,7 @@
                 </div>
                 <div id="number-people">
                     <img src="images/icon-person.svg" alt="icon person">
-                    <input class="input" type="number" name="" placeholder="0" value="" id="person">
+                    <input class="input" type="number" name="" placeholder="0" value="">
                 </div>
             </div>
         </div>
